<resources>
    <string name="app_name">Proyecto_Final</string>
    <string name="NombreEmpresa">Nombre de Empresa:</string>
    <string name="Email">Email:</string>
    <string name="Confirme">Confirme Email:</string>
    <string name="Contrasenia">Contraseña:</string>
    <string name="ConfirmeContrasenia">Confirme Contraseña:</string>
    <string name="Celular">Número Celular:</string>
    <string name="RUC">RUC:</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RegistroEmpresa">Registro de Nueva Empresa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RegistroPropuesta">Registro de Nueva Propuesta</string>
    <string name="DescripcionPropuesta">¿Cómo describirías mejor tu propuesta?</string>
    <string name="CantidadReservas">¿Cuántas personas pueden reservar?</string>
    <string name="TituloPropuesta">Pónle un título corto</string>
    <string name="ImagenPropuesta">Muestra la experiencia que ofreces</string>
    <string name="Siguiente">Siguiente</string>
    <string name="PropuestaDescripcion">Escribe una descripción</string>
    <string name="ConfirmacionReservas">Decide cómo confirmar tus reservas</string>
    <string name="rbInmediatas">Inmediatas</string>
    <string name="rbPreaprobar">Pre-aprobar</string>
    <string name="CostoExperiencia">¿Cuánto cuesta tu experiencia?</string>
    <string name="recordatorio">Puedes cambiarlo cuando quieras</string>
    <string name="NuevosSolesSigno">S/.</string>
    <string name="MontoEimpuestos">Este precio se mostrará al cliente + impuestos</string>
    <string name="CrearActividad">Crear Actividad</string>
    <string name="MisActividades">Mis experiencias</string>
    <string name="ActividadesEmpresa">Reservas</string>
    <string name="IniciarSesion">¿Tienes una Cuenta? Inicia Sesión</string>
    <string name="NuevoUsuario">¿Eres nuevo en TurismoGo? Registrate aquí!</string>
    <string name="Ingresar">Ingresar</string>
    <string name="RegistroUsuario">Registro de Nuevo Usuario</string>
    <string name="NombreCompleto">Nombre Completo:</string>
    <string name="FechaNacimiento">Fecha de Nacimiento:</string>
    <string name="RegistrarUsuario">Registrarse como Usuario</string>
    <string name="RegistrarEmpresa">Registrarse como Empresa</string>
    <string name="txtTituloPrincipal">Turismo GO</string>
    <string name="title_activity_nav_drawer_client">Nav_Drawer_Client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Iniciar Sesion</string>
    <string name="menu_slideshow">¿Eres una empresa?</string>
    <string name="menu_Reservas">Reservas</string>
    <string name="menu_Contacto">Contacto</string>
    <string name="menu_Help">Help</string>
    <string name="Recientes">Recientes</string>
    <string name="Puntuacion">Puntuación</string>
    <string name="iniciaPronto">Inicia Pronto</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="Comentarios">Comentarios:</string>
    <string name="Disponibilidad">Disponibilidad:</string>
    <string name="Precios">Precios:</string>
    <string name="Contacto">Contacto:</string>
    <string name="Reservar">Ir a Reservar</string>
    <string name="prueba">prueba</string>
    <string name="IrAPagar">Ir a Pagar</string>
    <string name="subtotal_format">%.2f</string>
    <string name="HistorialActividadesCliente">Historial de Actividades</string>

    <string name="menu_home_Empresas">Home_Empresas</string>
    <string name="menu_gallery_Empresas">Gallery_Empresas</string>
    <string name="menu_slideshow_Empresas">Slideshow_Empresas</string>
    <string name="title_activity_nav_drawer_empresa">Nav_Drawer_Empresa</string>
    <string name="CreaExperiencia">Crea una experiencia</string>
    <string name="zzz" />
    <string name="DescrpCategoria">¿Cómo describirías mejor tu propuesta?</string>
    <string name="MaxPers">¿Cúantos máximo por grupo?</string>
    <string name="MuestraExperiencia">Muestra la experiencia que ofreces</string>
    <string name="Logo">El Logo de tu Empresa</string>
    <string name="hasta3Mas">Puedes subir hasta 3 imágenes más</string>
    <string name="Titulo">Ponle un título corto</string>
    <string name="Descrp">Escribe una descripción</string>
    <string name="DecideConfirmar">Decide cómo confimar tus reservas</string>
    <string name="Precio">¿Cuánto cuesta tu experiencia?</string>
    <string name="telefono">Número de teléfono</string>
    <string name="Publicar">Publicar Actividad</string>
    <string name="Inmediato">Inmediatas</string>
    <string name="Preaprobar">Pre-aprobar</string>
    <string name="agregaActividad">Agregar actividad</string>

</resources>
